validation corrections
